--- a/templates/novo.html
+++ b/templates/novo.html
@@ -1,7 +1,14 @@
 {% extends 'layouts/base.html' %}
 
 {% block body %}
-    <form method="post" action="">
+    <form method="post" action="" enctype="multipart/form-data">
+        <figure>
+            <img width="50" height="50" src="{{url_for('imagem', nome_arquivo='capa_default.jpg')}}">
+            <figcaption>
+                <label>Mudar capa</label>
+                <input type="file" accept=".jpg" name="imagem">
+            </figcaption>
+        </figure>
         <input type="text" name="nome" placeholder="Nome" required>
         <input type="text" name="categoria" placeholder="Categoria" required>
         <input type="text" name="console" placeholder="Console" required>
