to fix: edit form validate

--- a/templates/editar.html
+++ b/templates/editar.html
@@ -15,4 +15,5 @@
         <input type="text" name="console" placeholder="Console" value="{{jogo.console}}" required>
         <input type="submit" value="Editar">
     </form>
+    <a class="btn btn-danger" href="{{url_for('root')}}">Voltar</a>
 {% endblock body %}
