--- a/templates/editar.html
+++ b/templates/editar.html
@@ -3,6 +3,7 @@
 {% block body %}
     <h1>Editar jogo</h1>
     <form method="post" action="" enctype="multipart/form-data">
+        {{ form.csrf_token() }}
         <figure>
             <img width="50" height="50" src="{{url_for('imagem', nome_arquivo=capa_jogo)}}">
             <figcaption>
@@ -10,10 +11,13 @@
                 <input type="file" accept=".jpg" name="imagem">
             </figcaption>
         </figure>
-        <input type="text" name="nome" placeholder="Nome" value="{{jogo.nome}}" required>
-        <input type="text" name="categoria" placeholder="Categoria" value="{{jogo.categoria}}" required>
-        <input type="text" name="console" placeholder="Console" value="{{jogo.console}}" required>
-        <input type="submit" value="Editar">
+        {{ form.nome.label(class='form-label') }}
+        {{ form.nome(class='form-control') }}
+        {{ form.categoria.label(class='form-label') }}
+        {{ form.categoria(class='form-control') }}
+        {{ form.console.label(class='form-label') }}
+        {{ form.console(class='form-control') }}
+        {{ form.salvar(class='btn btn-primary') }}
     </form>
     <a class="btn btn-danger" href="{{url_for('root')}}">Voltar</a>
 {% endblock body %}
